Remove useless cast from get factory by attribute method